--- a/src/app/plan/plan.component.html
+++ b/src/app/plan/plan.component.html
@@ -1,12 +1,12 @@
 <app-profile></app-profile>
 
-<h1 class="flex-center" style="padding: 64px">Carrer del Mar 123</h1>
+<h1 class="flex-center" style="padding: 64px; font-size: 5vmax">Carrer del Mar 123</h1>
 
 <div class="container"
      style="width: auto; margin: auto; display: flex; flex-direction: column; flex-wrap: wrap; align-content: space-around">
 
   <!-- Created with Inkscape (http://www.inkscape.org/) -->
-  <svg width="175mm" height="125mm" version="1.1" viewBox="0 0 175 125" xmlns="http://www.w3.org/2000/svg">
+  <svg width="50%" height="50%" version="1.1" viewBox="0 0 175 125" xmlns="http://www.w3.org/2000/svg">
     <g transform="translate(70.8 -14.7)">
       <g fill="none" stroke="#000">
         <path d="m-68.8 66.5v-49.8h171v121h-64" stop-color="#000000" stroke-width="4.05"/>
