--- a/src/app/add-task/add-task.component.html
+++ b/src/app/add-task/add-task.component.html
@@ -1,4 +1,5 @@
-<div class="card" style="margin: auto; margin-top:64px; width: 40%; min-width: 400px">
+<app-profile></app-profile>
+<div class="card" style="margin: auto; margin-top:128px; width: 40%; min-width: 400px">
 
   <h5 class="card-header info-color white-text text-center py-4">
     <strong>Add Task</strong>
@@ -14,7 +15,7 @@
              [(ngModel)]="task.description">
 
       <select name="room" class="form-control" required [(ngModel)]="task.room_id">
-        <option selected id="mock" value="rr">Room</option>
+        <option selected id="mock" value="all house">Room</option>
         <option *ngFor="let room of rooms;" [value]="room.id">{{room.id}}</option>
       </select>
 
