--- a/src/app/tasks/tasks.component.scss
+++ b/src/app/tasks/tasks.component.scss
@@ -1,10 +1,12 @@
 .pop-form{
   font-size: 60px;
-  position: absolute;
+  position: fixed;
   z-index: 10;
-  left: 30%;
-  width: 40%;
-  top: 30%;
+  margin: auto;
+  width: 30%;
+  right: 8px;
+  min-width: 400px;
+  top: 25%;
   background: white;
 
 }
